methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:21: error: '(' expected but identifier found.
   if estsurBiscuit(){
      ^SlugHunting:24: error: illegal start of simple expression
}
^